# rg2

./: .gitignore  .goosehints  CMakeLists.txt  generate-include-files.cmake  partitions.csv  run_build.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old
.cursor/rules/: cursor-rule.mdc
components/jackhuang021__esp32-wifi-manager/: .component_hash  .gitignore  CMakeLists.txt  Kconfig  README.md  README_cn.md  idf_component.yml
components/jackhuang021__esp32-wifi-manager/examples/default_demo/: CMakeLists.txt  Makefile  sdkconfig.defaults
components/jackhuang021__esp32-wifi-manager/examples/default_demo/main/: user_main.c
components/jackhuang021__esp32-wifi-manager/examples/http_hook/main/: user_main.c
components/jackhuang021__esp32-wifi-manager/src/: index.html  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig  RoomGuardianV2.cpp  bme280_example.c  constants.h  idf_component.yml  main.cpp  rgv2.cpp  zigbee_app.h
main/communications/: rg_wifi.h  rg_zigbee.cpp  rg_zigbee.h
main/communications/matter/: rg_matter.cpp
main/communications/openthread/: rg_openthread.cpp
main/communications/wifi/: rg_wifi.h
main/communications/zigbee/: rg_zigbee.h
main/components/: rg_bme280.h
main/sensor_modules/: rg_bme280.c  rg_bme280.h
main/services/: rg_http_server.h
main/services/shared_data/: shared_data.cpp  shared_data.h
tests/: CMakeLists.txt  test_rg_bme280.c
